# MooNWide

./: .gitignore  LEGAL-EN.md  LEGAL-RU.md  NOTICE-MooNWide.txt  README.md  Run-MooNWide-Steam.bat  Run-MooNWide.bat  THIRD_PARTY_NOTICES.txt  Update-MooNWide.bat  Update-MooNWide.ps1  java-hosts-moonwide  moonwide-version.txt  steam_appid.txt
hafen-client-new/: LAUNCHER_MENU.md  README  build.xml
hafen-client-new/etc/: net-proxy.example.properties
hafen-client-new/native/havenbot/: CMakeLists.txt  README.txt  build-native.bat  build-native.sh
hafen-client-new/native/havenbot/src/: haven_bot.cpp
hafen-client-new/native/moonpackethook/: CMakeLists.txt  README.txt  build-native.bat  build-native.sh
hafen-client-new/native/moonpackethook/src/: moon_jni_packet_hook.cpp
hafen-client-new/src/core/: Logger.java
hafen-client-new/src/haven/: AuthClient.java  AutoTranslate.java  BAttrWnd.java  BeltWnd.java  Bootstrap.java  Buff.java  Button.java  CharWnd.java  Charlist.java  ChatUI.java  ChatWnd.java  Chatwindow.java  CollisionRadius.java  Config.java  Connection.java  CoordinateValidator.java  Defer.java  DpiSplitWriteChannel.java  Equipory.java  FepMeter.java  FightWnd.java  Fightsess.java  Fightview.java  FlowerMenu.java  GItem.java  GLPanel.java  GameUI.java  Glob.java  Gob.java  GridList.java  HavenDpiBypass.java  HavenNetProxy.java  Homing.java  Http.java  HttpConnectTunnel.java  IMeter.java  ISBox.java  Inventory.java  InventoryItemClickPolicy.java  ItemDrag.java  (+145 more)
hafen-client-new/src/haven/botnative/: HavenBotNative.java
hafen-client-new/src/haven/discord/: MoonDiscordHttp.java  MoonDiscordJson.java  MoonDiscordNotifyWnd.java  MoonDiscordService.java
hafen-client-new/src/haven/l10n/: lang_en.json  lang_ru.json  lang_ru_literals.json
hafen-client-new/src/haven/render/gl/: GLEnvironment.java  GLTexture.java
hafen-client-new/src/haven/res/: moon-combat-data.json  moon-craft-wiki.json
hafen-client-new/src/haven/res/moon/: moon-l10n-game.json
hafen-client-new/src/haven/resutil/: CaveTile.java  Curiosity.java  FoodInfo.java
jre/: release
(+5 files in other folders)
